# gopener

./: .gitignore  LICENSE  README.md  google_office_bridge.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.cursor/commands/: summarize-pr.md
.github/workflows/: build-and-test.yml  ci.yml
instructions/: commit_message.md
src/: App.vue  main.ts
src-tauri/: .env.example  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  main.rs
src-tauri/src/commands/: auth.rs  fileassoc.rs  mod.rs  oauth_config.rs  storage.rs  upload.rs
src-tauri/src/google/: client.rs  drive.rs  mod.rs
src-tauri/src/utils/: file.rs  keychain.rs  mod.rs
src/__mocks__/@tauri-apps/: plugin-shell.ts
src/__mocks__/@tauri-apps/api/: core.ts  event.ts
src/assets/: styles.css
src/components/: AuthButton.vue  FileUploader.vue  FolderBrowser.vue  QuickUpload.vue  RecentFiles.vue  Settings.vue
src/services/: google-api.ts  tauri-commands.ts
src/services/__tests__/: google-api.test.ts
src/stores/: auth.ts  oauth-config.ts  settings.ts  upload.ts
src/stores/__tests__/: auth.test.ts  oauth-config.test.ts  settings.test.ts  upload.test.ts
