[package]
name = "gopener"
version = "0.1.0"
description = "Google Office Bridge - Upload Office files to Google Drive"
authors = ["Gopener"]
edition = "2021"

[lib]
name = "gopener_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
keyring = "3"
base64 = "0.22"
sha2 = "0.10"
rand = "0.8"
url = "2"
thiserror = "1"
dirs = "5"
mime_guess = "2"
urlencoding = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
